--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <script src="script.js"></script>
     
     <footer class="license-footer">
-        <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>
+        <a href="https://github.com/Anshengsen/open-dbsx/blob/main/LICENSE" target="_blank">MIT License</a>
     </footer>
 </body>
 </html>
